// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compontent snapshots Alternative Footer 1`] = `
<div>
  <footer
    class="usa-footer text-white"
  >
    <div
      class="usa-footer__primary-section bg-primary"
    >
      <div
        class="grid-row padding-x-5 padding-y-2 flex-align-center"
      >
        <div
          class="grid-col text-white"
        >
          <div
            class="grid-col-4"
          >
            <h4
              class="margin-0"
            >
              Sitemap
            </h4>
            <hr />
            <div
              class="grid-row"
            >
              <div
                class="grid-col-6"
              >
                <a
                  class="text-white font-sans-md text-no-underline padding-x-1 grid-col"
                  href="https://www.google.com/"
                >
                  FAQ
                  <svg
                    aria-hidden="true"
                    aria-label="launch icon"
                    class="usa-icon--size-3"
                    color="#fff"
                    fill="currentColor"
                    role="img"
                  >
                    <use
                      href="sprite.svg#launch"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="grid-col-4"
        >
          <div
            class="grid-row flex-align-center"
          >
            <div
              aria-label="Medicaid Logo"
              class="application-logo-container "
              role="img"
            >
              <img
                alt="Medicaid Logo"
                aria-hidden="false"
                src="[object Object]"
                width="200"
              />
            </div>
            <div
              aria-label="Department of Health and Human Services"
              class="application-logo-container grid-col-3 margin-left-1"
              role="img"
            >
              <img
                alt="Department of Health and Human Services Logo"
                aria-hidden="false"
                height="80"
                src="[object Object]"
                width="200"
              />
            </div>
          </div>
          <div
            class="font-sans-xs"
          >
            A federal government website managed and paid for by the U.S. Centers for Medicare and Medicaid Services and part of the MACPro suite.
          </div>
        </div>
      </div>
    </div>
    <div
      class="usa-footer__secondary-section bg-primary-darker text-white font-sans-2xs padding-x-4"
    >
      <div
        class="grid-row"
      >
        <p
          class="tablet:grid-col-9 mobile-text-center"
        >
          Email
           
          <a
            href="mailto:test@gmail.com"
          >
            <b>
              test@gmail.com
            </b>
          </a>
           
          for help or feedback.
        </p>
        <p
          class="tablet:grid-col-3 mobile-text-center"
        >
          111 test drive
        </p>
      </div>
    </div>
  </footer>
</div>
`;

exports[`compontent snapshots Basic Footer 1`] = `
<div>
  <footer
    class="usa-footer usa-footer--slim"
  >
    <div
      class="usa-footer__primary-section bg-accent-cool-lighter flex-justify-end"
    >
      <div
        class="grid-row padding-x-5 padding-y-2 flex-align-center"
      >
        <div
          class="tablet:grid-col mobile-text-center"
        >
          <div
            aria-label="Medicaid Logo"
            class="application-logo-container "
            role="img"
          >
            <img
              alt="Medicaid Logo"
              aria-hidden="false"
              src="[object Object]"
              width="200"
            />
          </div>
        </div>
        <div
          class="grid-row tablet:grid-col-5 flex-align-center"
        >
          <div
            aria-label="Department of Health and Human Services"
            class="application-logo-container grid-col tablet:grid-col-3 text-center"
            role="img"
          >
            <img
              alt="Department of Health and Human Services Logo"
              aria-hidden="false"
              height="80"
              src="[object Object]"
              width="200"
            />
          </div>
          <p
            class="grid-col-12 tablet:grid-col-9 font-sans-xs"
          >
            A federal government website managed and paid for by the U.S. Centers for Medicare and Medicaid Services and part of the MACPro suite.
          </p>
        </div>
      </div>
    </div>
    <div
      class="usa-footer__secondary-section bg-primary text-white font-sans-2xs padding-x-4"
    >
      <div
        class="grid-row"
      >
        <p
          class="tablet:grid-col-9 mobile-text-center"
        >
          Email
           
          <a
            href="mailto:test@gmail.com"
          >
            <b>
              test@gmail.com
            </b>
          </a>
           
          for help or feedback.
        </p>
        <p
          class="tablet:grid-col-3 mobile-text-center"
        >
          7500 Security Boulevard Baltimore, MD 21244
        </p>
      </div>
    </div>
  </footer>
</div>
`;
